[package]
name = "string-parser"
version = "0.1.1"
description = "String parsing crate"
authors = ["Clément Guiton <clement.guiton.dev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ProbablyClem/string_parser"
exclude = ["target"]
[dependencies]
